# hermicrab

./: Cargo.toml  LICENSE  README.md  dune-project  hermicrab.opam  w
lib/: ast.ml  dune  entry.ml  environment.ml  evaluator.ml  lexer.mll  menhir_parser.mly  parser.ml  typecheck.ml
spec/: compatibiliy.md  implementation.md  model.md  std.md  sugars.md  syntax.md
src/: ast.rs  grammar.lalrpop  interpreter.rs  main.rs  parser.rs  parser_helper.rs
test/: dune
